--- a/main/MainWindow.ui
+++ b/main/MainWindow.ui
@@ -6,19 +6,79 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1300</width>
+    <width>1280</width>
     <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Camera Feed App</string>
+   <string>VIR Innovations - VisionApp</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="mainLayout">
+    <property name="spacing">
+     <number>0</number>
+    </property>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QFrame" name="headerFrame">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="headerTitle">
+         <property name="text">
+          <string>VisionApp Control Center</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QLabel" name="headerSubtitle">
+         <property name="text">
+          <string>Powered by VIR Innovations</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
     <item>
      <widget class="QLabel" name="cameraFeedLabel">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="text">
-       <string>Camera is off. Press Live Stream to start.</string>
+       <string>Press Live Stream to Begin</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -26,102 +86,115 @@
      </widget>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
-       <widget class="QLabel" name="timelineLabel">
-        <property name="minimumSize">
-         <size>
-          <width>80</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Time: --</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSlider" name="timelineSlider">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QGroupBox" name="groupBox">
-        <property name="title">
-         <string>Playback Controls</string>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <widget class="QFrame" name="footerFrame">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <layout class="QHBoxLayout" name="timelineLayout">
          <item>
-          <widget class="QPushButton" name="playButton">
+          <widget class="QLabel" name="timelineLabel">
+           <property name="minimumSize">
+            <size>
+             <width>100</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="text">
-            <string>Live Stream</string>
+            <string>Time: --</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="pauseButton">
-           <property name="text">
-            <string>Pause</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="resumeButton">
-           <property name="text">
-            <string>Resume</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="rewindButton">
-           <property name="text">
-            <string>Rewind</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="forwardButton">
-           <property name="text">
-            <string>Forward</string>
+          <widget class="QSlider" name="timelineSlider">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
         </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QGroupBox" name="groupBox_2">
-        <property name="title">
-         <string>Camera Settings</string>
-        </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="controlsLayout">
+         <property name="spacing">
+          <number>15</number>
+         </property>
          <item>
-          <widget class="QLabel" name="label">
+          <widget class="QPushButton" name="playButton"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pauseButton"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="resumeButton"/>
+         </item>
+         <item>
+          <widget class="Line" name="separator1">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="rewindButton"/>
+         </item>
+         <item>
+          <widget class="QPushButton" name="forwardButton"/>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLabel" name="resolutionLabel">
            <property name="text">
             <string>Resolution:</string>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="resolutionComboBox"/>
+          <widget class="QComboBox" name="resolutionComboBox">
+           <property name="minimumSize">
+            <size>
+             <width>120</width>
+             <height>0</height>
+            </size>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QLabel" name="currentResolutionLabel">
+           <property name="minimumSize">
+            <size>
+             <width>120</width>
+             <height>0</height>
+            </size>
+           </property>
            <property name="text">
             <string>Current: N/A</string>
            </property>
           </widget>
          </item>
         </layout>
-       </widget>
-      </item>
-     </layout>
+       </item>
+      </layout>
+     </widget>
     </item>
    </layout>
   </widget>
